@@ -1,5 +1,12 @@
 2012-06-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Make the `smooth' benchmark compatible with the `spp' targets.
+
+	* benchmarks/smooth/smooth.c: Do not nest `sl_create' if the
+	current dialect is `spp'.
+
+2012-06-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Minor packaging fixes.
 
 	* benchmarks/blas/gendata.sh,
